# pydantic-avro

./: .gitignore  AGENTS.md  CONTEXT.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.scratch/avro-feature-roadmap/: PRD.md
.scratch/avro-feature-roadmap/issues/: 01-logical-types.md  02-annotated-avro-metadata.md  03-schema-compatibility-checker.md  04-confluent-schema-registry-format.md  05-arbitrary-unions.md  06-recursive-models.md  07-avro-json-to-pydantic-cli.md  08-pydantic-model-to-avro-cli.md  09-schema-diff-ux.md
.scratch/avro-logical-types-metadata/: PRD.md
.scratch/avro-logical-types-metadata/handoffs/: 01-annotated-decimal-logical-type-tracer.md  02-decimal-metadata-composition-and-conflicts.md  03-date-time-and-uuid-logical-types.md  04-timestamp-logical-type-with-timezone-safety.md  05-logical-type-docs-and-roadmap-cleanup.md
.scratch/avro-logical-types-metadata/issues/: 01-annotated-decimal-logical-type-tracer.md  02-decimal-metadata-composition-and-conflicts.md  03-date-time-and-uuid-logical-types.md  04-timestamp-logical-type-with-timezone-safety.md  05-logical-type-docs-and-roadmap-cleanup.md
docs/adr/: 0001-map-string-literals-to-field-local-avro-enums.md  0002-use-python-named-type-aliases-for-named-literal-enums.md  0003-use-pydantic-field-for-clear-avro-field-metadata.md  0004-infer-obvious-avro-logical-types-from-python-types.md
examples/: user.py
src/pydantic_avro/: __init__.py  base.py  codec.py  config.py  conversion.py  errors.py  metadata.py  schema.py
tests/: test_base.py  test_codec.py  test_errors.py  test_examples.py  test_schema.py
