[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-avro"
version = "0.0.0"
description = "Pydantic v2 models to schemaless Avro messages"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pydantic-avro contributors" }]
dependencies = [
  "pydantic>=2",
  "fastavro",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_avro"]
