[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-avro"
version = "0.0.0"
description = "Pydantic v2 models to schemaless Avro messages"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "pydantic-avro contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2",
  "fastavro",
]

[project.urls]
Homepage = "https://github.com/ryanmiville/pydantic-avro"
Repository = "https://github.com/ryanmiville/pydantic-avro"
Issues = "https://github.com/ryanmiville/pydantic-avro/issues"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_avro"]
